# ConsoleVideo

./: .gitignore  README.md
code/: CMakeLists.txt  README.md
code/include/: audio.h  client.h  msg.h  rtp.h  turn.h  video.h
code/lib/mylib/: libmsg.dylib  librtp.dylib  libturn.dylib  libvideo.dylib
code/lib/opencv/: libopencv_aruco.3.4.2.dylib  libopencv_bgsegm.3.4.2.dylib  libopencv_bioinspired.3.4.2.dylib  libopencv_calib3d.3.4.2.dylib  libopencv_ccalib.3.4.2.dylib  libopencv_datasets.3.4.2.dylib  libopencv_dnn.3.4.2.dylib  libopencv_dnn_objdetect.3.4.2.dylib  libopencv_dpm.3.4.2.dylib  libopencv_face.3.4.2.dylib  libopencv_features2d.3.4.2.dylib  libopencv_flann.3.4.2.dylib  libopencv_fuzzy.3.4.2.dylib  libopencv_hfs.3.4.2.dylib  libopencv_highgui.3.4.2.dylib  libopencv_img_hash.3.4.2.dylib  libopencv_imgcodecs.3.4.2.dylib  libopencv_line_descriptor.3.4.2.dylib  libopencv_ml.3.4.2.dylib  libopencv_objdetect.3.4.2.dylib  libopencv_optflow.3.4.2.dylib  libopencv_phase_unwrapping.3.4.2.dylib  libopencv_photo.3.4.2.dylib  libopencv_plot.3.4.2.dylib  libopencv_reg.3.4.2.dylib  libopencv_rgbd.3.4.2.dylib  libopencv_saliency.3.4.2.dylib  libopencv_shape.3.4.2.dylib  libopencv_stereo.3.4.2.dylib  libopencv_stitching.3.4.2.dylib  libopencv_structured_light.3.4.2.dylib  libopencv_superres.3.4.2.dylib  libopencv_surface_matching.3.4.2.dylib  libopencv_tracking.3.4.2.dylib  libopencv_video.3.4.2.dylib  libopencv_videoio.3.4.2.dylib  libopencv_videostab.3.4.2.dylib  libopencv_xfeatures2d.3.4.2.dylib  libopencv_ximgproc.3.4.2.dylib  libopencv_xobjdetect.3.4.2.dylib  (+1 more)
code/lib/portaudio/: libportaudio.dylib
code/src/: CMakeLists.txt
code/src/app/: CMakeLists.txt
code/src/app/client/: CMakeLists.txt  client.cpp  client_test.cpp  client_utils.cpp
code/src/libs/: CMakeLists.txt
code/src/libs/audio/: CMakeLists.txt
code/src/libs/msg/: CMakeLists.txt  msg.cpp
code/src/libs/rtp/: CMakeLists.txt  rtp.cpp
code/src/libs/turn/: CMakeLists.txt  test.cpp  turn.cpp  turn_msg.cpp
code/src/libs/video/: CMakeLists.txt  video.cpp
code/src/test/: CMakeLists.txt  audio_test.cpp  client.cpp  client_test1.cpp  client_test2.cpp  patest_read_record.c  test.cpp  test0.cpp  test_jpeg.cpp
