INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

SET(CMAKE_MACOSX_RPATH 1)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib/mylib)

# Dynamic lib
ADD_LIBRARY(msg_so SHARED msg.cpp)
SET_TARGET_PROPERTIES(msg_so PROPERTIES OUTPUT_NAME "msg")

# Static Lib
ADD_LIBRARY(msg_a STATIC msg.cpp)
SET_TARGET_PROPERTIES(msg_a PROPERTIES OUTPUT_NAME "msg")
