INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

SET(CMAKE_MACOSX_RPATH 1)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib/mylib)

# Dynamic lib
ADD_LIBRARY(rtp_so SHARED rtp.cpp)
SET_TARGET_PROPERTIES(rtp_so PROPERTIES OUTPUT_NAME "rtp")

# Static Lib
ADD_LIBRARY(rtp_a STATIC rtp.cpp)
SET_TARGET_PROPERTIES(rtp_a PROPERTIES OUTPUT_NAME "rtp")
