INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

# Test
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/test)

#ADD_EXECUTABLE(video test test.cpp video.cpp)


SET(CMAKE_MACOSX_RPATH 1)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib/mylib)

# Dynamic lib
ADD_LIBRARY(turn_so SHARED turn.cpp)
SET_TARGET_PROPERTIES(turn_so PROPERTIES OUTPUT_NAME "turn")

# Static Lib
ADD_LIBRARY(turn_a STATIC turn.cpp)
SET_TARGET_PROPERTIES(turn_a PROPERTIES OUTPUT_NAME "turn")
